# NAF-Common

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING
project/: .clang-format  CMakeLists.txt  CMakePresets.json  vcpkg.json
project/include/: config.h.in
project/src/: PCH.h
project/src/Animation/: Composer.cpp  Composer.h  EventTrack.cpp  EventTrack.h  FileManager.cpp  FileManager.h  Generator.cpp  Generator.h  Graph.cpp  Graph.h  GraphManager.cpp  GraphManager.h  IAnimEventHandler.h  IAnimationFile.h  IBasicAnimation.cpp  IBasicAnimation.h  IKTwoBoneData.cpp  IKTwoBoneData.h  MorphAnimation.cpp  MorphAnimation.h  Node.cpp  Node.h  Ozz.cpp  Ozz.h  PoseCache.cpp  PoseCache.h  Sequencer.cpp  Sequencer.h  SyncInstance.cpp  SyncInstance.h  Transform.cpp  Transform.h
project/src/Animation/Face/: Manager.cpp  Manager.h
project/src/Animation/Jobs/: IKTwoBoneJob.cpp  IKTwoBoneJob.h  IPostGenJob.h  SpringBoneJob.cpp  SpringBoneJob.h
project/src/Animation/Procedural/: PAngularConeConstrNode.cpp  PAngularConeConstrNode.h  PBlend2DNode.cpp  PBlend2DNode.h  PDataObject.cpp  PDataObject.h  PFixedValueNode.cpp  PFixedValueNode.h  PFullAnimationNode.cpp  PFullAnimationNode.h  PGraph.cpp  PGraph.h  PInternalCacheReleaseNode.cpp  PInternalCacheReleaseNode.h  PLimitROCNode.cpp  PLimitROCNode.h  PLinearBoxConstrNode.cpp  PLinearBoxConstrNode.h  PLinearSphereConstrNode.cpp  PLinearSphereConstrNode.h  PNode.cpp  PNode.h  POneBoneIKNode.cpp  POneBoneIKNode.h  PSmoothValNode.cpp  PSmoothValNode.h  PSmoothedRandNode.cpp  PSmoothedRandNode.h  PSpringBoneNode.cpp  PSpringBoneNode.h  PSpringPropsNode.cpp  PSpringPropsNode.h  PStaticPoseNode.cpp  PStaticPoseNode.h  PTransformRangeNode.cpp  PTransformRangeNode.h  PTwoBoneIKNode.cpp  PTwoBoneIKNode.h  PVariableNode.cpp  PVariableNode.h  (+1 more)
project/src/Physics/: Body.cpp  Body.h  Constraint.cpp  Constraint.h  DynamicProperty.h  ModelSpaceSystem.cpp  ModelSpaceSystem.h  Spring.cpp  Spring.h
project/src/RE/: CommonMisc.h
project/src/Serialization/: BlendGraphImport.cpp  BlendGraphImport.h  BlendGraphSchemaExport.cpp  BlendGraphSchemaExport.h  GLTFExport.cpp  GLTFImport.cpp  GLTFImport.h
project/src/Settings/: Impl.cpp  Impl.h  Settings.cpp  Settings.h  SkeletonDescriptor.cpp  SkeletonDescriptor.h
project/src/Util/: General.cpp  General.h  Math.h  Ozz.h  Scaleform.h  String.cpp  String.h  Trampoline.cpp  Trampoline.h
